example-dev-db.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: meizhedb


# -----------------------
#         Mongo
# -----------------------
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: meizhedb
spec:
  type: NodePort
  selector:
    app:
      mongo
  ports:
    - port: 27017
      targetPort: 27017
      nodePort: 27017
      name: mongo
    - port: 8081
      targetPort: 8081
      nodePort: 18081
      name: mongo-express
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: meizhedb
spec:
  selector:
    matchLabels:
      app: mongo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - image: mongo:4.4.0
          name: mongo
          command:
            - mongod
            - "--bind_ip"
            - "0.0.0.0"
            - "--wiredTigerCacheSizeGB"
            - "0.5"
          ports:
            - containerPort: 27017
              name: mongo
          volumeMounts:
            - name: mongo-persistent-storage
              mountPath: /data/db
        - image: mongo-express:0.54
          name: mongo-express
          ports:
            - containerPort: 8081
      volumes:
        - name: mongo-persistent-storage
          persistentVolumeClaim:
            claimName: mongo-pv-claim2
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: meizhedb
spec:
  ports:
    - port: 6379
      targetPort: 6379
      nodePort: 6379
      name: redis
  selector:
    app: redis
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: meizhedb
spec:
  selector:
    matchLabels:
      app: redis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - image: redis:alpine
          name: redis
          command:
            - redis-server
            - "--appendonly"
            - "no"
            - "--save"
            - "''"
          ports:
            - containerPort: 6379
              name: redis
